--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
             <div class="logo">ماريا</div>
         </nav>
 
-
-
         <div class="hero-container">
             <header class="hero">
                 <div class="hero-subsection">
@@ -70,7 +68,6 @@
                 
             </header>
         </div>
-
     </header>
 
 
@@ -161,18 +158,19 @@
 
             </div>
         </div>
-
         <div class="section-header">
             <h2>البرامج التدريبية</h2>
         </div>
         <div class="grid-sections">
             <div class="grid-item">
-                <h2>المثال الأول</h2>
+                <img src="./content/emotion.png" alt="emotion img">
+                <h2>الذكاء العاطفي</h2>
                 <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة. يمكن أن يتم تعديل هذا النص أو استبداله بنص آخر. الهدف من هذا النص هو أن يحتل مساحة في التصميم.</p>
             </div>
             <div class="grid-separator-vertical"></div>
             <div class="grid-item">
-                <h2>المثال الثاني</h2>
+                <img src="./content/speech.svg" alt="speech img">
+                <h2>معجزة الكلام</h2>
                 <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة. يمكن أن يتم تعديل هذا النص أو استبداله بنص آخر. الهدف من هذا النص هو أن يحتل مساحة في التصميم.</p>
             </div>
             <div class="grid-separator-horizontal"></div>
@@ -188,6 +186,11 @@
         </div>
 
         <section class="consultation-section">
+            <div class="custom-shape-divider-top-1737342738">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M1200 0L0 0 892.25 114.72 1200 0z" class="shape-fill"></path>
+                </svg>
+            </div>
             <div class="section-header">
                 <h2>الاستشارات</h2>
             </div>
@@ -226,10 +229,9 @@
             </div>
         </section>
 
-    
 
         <section class="testimonials-section">
-            <div class="section-header">
+            <div class="testimonials-section-header">
                 <h2>الخبرة السابقة</h2>
             </div>
             <div class="testimonials-container">
