--- a/pages/blog2/blog2.html
+++ b/pages/blog2/blog2.html
@@ -61,15 +61,15 @@
             </div>
         </div>
     </div>
-    <main class="blog-grid">
 
+    <main class="blog-grid">
         <article class="blog-card">
             <div class="blog-card-image">
                 <img src="../../content/down1.jpg" alt="مقال عن التعليم">
             </div>
             <div class="blog-card-content">
                 <h2>عنوان المقال الأول</h2>
-                <p class="blog-excerpt">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربي...</p>
+                <p class="blog-excerpt">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة...</p>
                 <div class="blog-meta">
                     <span class="blog-date">٥ يناير ٢٠٢٤</span>
                     <div class="blog-share">
@@ -99,7 +99,7 @@
             </div>
             <div class="blog-card-content">
                 <h2>عنوان المقال الثاني</h2>
-                <p class="blog-excerpt">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربي...</p>
+                <p class="blog-excerpt">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة...</p>
                 <div class="blog-meta">
                     <span class="blog-date">٣ يناير ٢٠٢٤</span>
                     <div class="blog-share">
@@ -129,7 +129,7 @@
             </div>
             <div class="blog-card-content">
                 <h2>عنوان المقال الثالث</h2>
-                <p class="blog-excerpt">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربي...</p>
+                <p class="blog-excerpt">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة...</p>
                 <div class="blog-meta">
                     <span class="blog-date">١ يناير ٢٠٢٤</span>
                     <div class="blog-share">
@@ -151,38 +151,39 @@
                  </a>
             </div>
         </article>
+        <article class="blog-card">
+            <div class="blog-card-image">
+                <img src="../../content/down1.jpg" alt="مقال عن التعليم">
+            </div>
+            <div class="blog-card-content">
+                <h2>عنوان المقال الأول</h2>
+                <p class="blog-excerpt">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة...</p>
+                <div class="blog-meta">
+                    <span class="blog-date">٥ يناير ٢٠٢٤</span>
+                    <div class="blog-share">
+                        <button class="share-btn twitter" onclick="shareOnTwitter()">
+                            <img src="../../content/twitter.svg" alt="twitter">
+                        </button>
+                        <button class="share-btn linkedin" onclick="shareOnLinkedIn()">
+                            <img src="../../content/linkedin.svg" alt="linkedin">
+                        </button>
+                    </div>
+                </div>
+                <a href="#" >
+                    <div class="read-more">
+                        <img src="../../content/arrow-up.svg" alt="arrow" >
+                            <p>
+                                اقرأ المزيد
+                            </p>
+                    </div>
+                 </a>
+    
+            </div>
+        </article>
     </main>
 
 
-    <article class="blog-card">
-        <div class="blog-card-image">
-            <img src="../../content/down1.jpg" alt="مقال عن التعليم">
-        </div>
-        <div class="blog-card-content">
-            <h2>عنوان المقال الأول</h2>
-            <p class="blog-excerpt">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربي...</p>
-            <div class="blog-meta">
-                <span class="blog-date">٥ يناير ٢٠٢٤</span>
-                <div class="blog-share">
-                    <button class="share-btn twitter" onclick="shareOnTwitter()">
-                        <img src="../../content/twitter.svg" alt="twitter">
-                    </button>
-                    <button class="share-btn linkedin" onclick="shareOnLinkedIn()">
-                        <img src="../../content/linkedin.svg" alt="linkedin">
-                    </button>
-                </div>
-            </div>
-            <a href="#" >
-                <div class="read-more">
-                    <img src="../../content/arrow-up.svg" alt="arrow" >
-                        <p>
-                            اقرأ المزيد
-                        </p>
-                </div>
-             </a>
-
-        </div>
-    </article>
+    
 
 
 </div>
