--- a/pages/blog2/blog2.html
+++ b/pages/blog2/blog2.html
@@ -19,8 +19,8 @@
     <nav class="navbar">
         <ul class="nav-links">
             <li><a href="#contact-section">احجز استشارتك</a></li>
-            <li><a href="/pages/blog2/blog2.html">مشاركات</a></li>
-            <li><a href="/pages/blog2/blog2.html">مدونات</a></li>
+            <li><a href="blog1/pages/blog2/blog2.html">مشاركات</a></li>
+            <li><a href="blog1/pages/blog2/blog2.html">مدونات</a></li>
         </ul>
         <div class="logo">
             <div class="name-logo">
@@ -50,8 +50,8 @@
         </div>
 
         <ul class="mobile-nav-links">
-            <li style="--index: 0"><a href="/pages/blog2/blog2.html">مشاركات</a></li>
-            <li style="--index: 1"><a href="/pages/blog2/blog2.html">مدونات</a></li>
+            <li style="--index: 0"><a href="blog1/pages/blog2/blog2.html">مشاركات</a></li>
+            <li style="--index: 1"><a href="blog1/pages/blog2/blog2.html">مدونات</a></li>
         </ul>
     </div>
 
@@ -85,7 +85,7 @@
 
     <main class="blog-grid">
         <article class="blog-card">
-            <a href="/pages/blog-template.html">
+            <a href="blog1/pages/blog-template.html">
             <div class="blog-card-main">
                 <div class="blog-card-image">
                     <img src="../../content/down1.jpg" alt="مقال عن التعليم">
@@ -120,7 +120,7 @@
         </article>
 
         <article class="blog-card">
-            <a href="/pages/blog-template.html">
+            <a href="blog1/pages/blog-template.html">
             <div class="blog-card-main">
                 <div class="blog-card-image">
                     <img src="../../content/speaking.png" alt="مقال عن التعليم">
@@ -160,7 +160,7 @@
 
  
         <article class="blog-card">
-            <a href="/pages/blog-template.html">
+            <a href="blog1/pages/blog-template.html">
             <div class="blog-card-main">
                 <div class="blog-card-image">
                     <img src="../../content/down1.jpg" alt="مقال عن التعليم">
@@ -198,7 +198,7 @@
             </a>
         </article>
         <article class="blog-card">
-            <a href="/pages/blog-template.html">
+            <a href="blog1/pages/blog-template.html">
             <div class="blog-card-main">
                 <div class="blog-card-image">
                     <img src="../../content/speaking.png" alt="مقال عن التعليم">
@@ -271,8 +271,8 @@
                     <h3>الصفحات</h3>
                     <img src="../../content/arrow-right.svg" alt="arrow"/>
                 </div>
-                <a href="/pages/blog2/blog2.html">مشاركات</a>
-                <a href="/pages/blog2/blog2.html">مدونات</a>
+                <a href="blog1/pages/blog2/blog2.html">مشاركات</a>
+                <a href="blog1/pages/blog2/blog2.html">مدونات</a>
             </div>
         </div>
         <div class="footer-bottom">
