--- a/pages/blog-template.html
+++ b/pages/blog-template.html
@@ -39,8 +39,8 @@
     <nav class="navbar">
         <ul class="nav-links">
             <li><a href="#contact-section">احجز استشارتك</a></li>
-            <li><a href="/pages/blog2/blog2.html">مشاركات</a></li>
-            <li><a href="/pages/blog2/blog2.html">مدونات</a></li>
+            <li><a href="blog1/pages/blog2/blog2.html">مشاركات</a></li>
+            <li><a href="blog1/pages/blog2/blog2.html">مدونات</a></li>
         </ul>
         <div class="logo">
             <div class="name-logo">
@@ -70,8 +70,8 @@
         </div>
 
         <ul class="mobile-nav-links">
-            <li style="--index: 0"><a href="/pages/blog2/blog2.html">مشاركات</a></li>
-            <li style="--index: 1"><a href="/pages/blog2/blog2.html">مدونات</a></li>
+            <li style="--index: 0"><a href="blog1/pages/blog2/blog2.html">مشاركات</a></li>
+            <li style="--index: 1"><a href="blog1/pages/blog2/blog2.html">مدونات</a></li>
         </ul>
     </div>
 
@@ -161,26 +161,7 @@
             </div>
         </section>
 
-        <!-- Related Posts -->
-        <!-- <section class="related-posts">
-            <h2>مقالات ذات صلة</h2>
-            <div class="related-posts-grid">
-                <article class="related-post-card">
-                    <img src="../content/placeholder2.jpg" alt="مقال ذو صلة">
-                    <div class="related-post-content">
-                        <h3>عنوان المقال المرتبط</h3>
-                        <span class="related-post-date">٣ يناير ٢٠٢٤</span>
-                    </div>
-                </article>
-                <article class="related-post-card">
-                    <img src="../content/placeholder1.jpg" alt="مقال ذو صلة">
-                    <div class="related-post-content">
-                        <h3>عنوان المقال المرتبط</h3>
-                        <span class="related-post-date">١ يناير ٢٠٢٤</span>
-                    </div>
-                </article>
-            </div>
-        </section> -->
+       
     </div>
 
     <!-- Footer -->
@@ -202,7 +183,6 @@
                 <div class="social-links">
                     <a href="#">تويتر</a>
                     <a href="#">لينكد إن</a>
-            
                 </div>
             </div>
             <div class="footer-section">
@@ -210,8 +190,8 @@
                     <h3>الصفحات</h3>
                     <img src="../../content/arrow-right.svg" alt="arrow"/>
                 </div>
-                <a href="/pages/blog2/blog2.html">مشاركات</a>
-                <a href="/pages/blog2/blog2.html">مدونات</a>
+                <a href="blog1/pages/blog2/blog2.html">مشاركات</a>
+                <a href="blog1/pages/blog2/blog2.html">مدونات</a>
             </div>
         </div>
         <div class="footer-bottom">
