--- a/pages/blog-template.html
+++ b/pages/blog-template.html
@@ -44,7 +44,7 @@
         </ul>
         <div class="logo">
             <div class="name-logo">
-            <a href="/index.html">
+            <a href="/blog1">
 
                 <div class="logo-firstname">سمية</div>
                 <div class="logo-lastname">السليماني</div>
@@ -62,7 +62,7 @@
             
         </div>
         <div class="mobile-name-logo">
-            <a href="/index.html">
+            <a href="/blog1">
                 <div class="mobile-logo-firstname">سمية</div>
                 <div class="mobile-logo-lastname">السليماني</div>
             </a>
