--- a/pages/blog2/blog2.html
+++ b/pages/blog2/blog2.html
@@ -24,7 +24,7 @@
         </ul>
         <div class="logo">
             <div class="name-logo">
-            <a href="/index.html">
+            <a href="/blog1">
 
                 <div class="logo-firstname">سمية</div>
                 <div class="logo-lastname">السليماني</div>
@@ -42,7 +42,7 @@
             
         </div>
         <div class="mobile-name-logo">
-            <a href="/index.html">
+            <a href="/blog1">
                 <div class="mobile-logo-firstname">سمية</div>
                 <div class="mobile-logo-lastname">السليماني</div>
             </a>
