--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <nav class="navbar">
             <ul class="nav-links">
                 <li><a href="#contact-section">احجز استشارتك</a></li>
-                <li><a href="blog1/pages/blog2/blog2.html">مشاركات</a></li>
-                <li><a href="blog1/pages/blog2/blog2.html">مدونات</a></li>
+                <li><a href="../pages/blog2/blog2.html">مشاركات</a></li>
+                <li><a href="/blog1/pages/blog2/blog2.html">مدونات</a></li>
             </ul>
             <div class="logo">
                 <div class="name-logo">
