--- a/pages/blog-template.html
+++ b/pages/blog-template.html
@@ -13,34 +13,15 @@
 </head>
 <body>
    
-    <!-- <nav class="blog-navbar">
-        <div class="blog-logo">سمية السليماني</div>
-        <ul class="blog-nav-links">
-            <li><a href="/consultation">احجز استشارتك</a></li>
-            <li><a href="/page2">مشاركات</a></li>
-            <li><a href="/blog">مدونات</a></li>
-        </ul>
-        <div class="blog-nav-trigger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </nav>
-
-    <div class="blog-mobile-nav">
-        <ul class="blog-mobile-links">
-            <li><a href="/page2">مشاركات</a></li>
-            <li><a href="/blog">مدونات</a></li>
-        </ul>
-    </div> -->
+   
 
 
 
     <nav class="navbar">
         <ul class="nav-links">
             <li><a href="#contact-section">احجز استشارتك</a></li>
-            <li><a href="blog1/pages/blog2/blog2.html">مشاركات</a></li>
-            <li><a href="blog1/pages/blog2/blog2.html">مدونات</a></li>
+            <li><a href="/pages/blog2/blog2.html">مشاركات</a></li>
+            <li><a href="/pages/blog2/blog2.html">مدونات</a></li>
         </ul>
         <div class="logo">
             <div class="name-logo">
@@ -70,8 +51,8 @@
         </div>
 
         <ul class="mobile-nav-links">
-            <li style="--index: 0"><a href="blog1/pages/blog2/blog2.html">مشاركات</a></li>
-            <li style="--index: 1"><a href="blog1/pages/blog2/blog2.html">مدونات</a></li>
+            <li style="--index: 0"><a href="/pages/blog2/blog2.html">مشاركات</a></li>
+            <li style="--index: 1"><a href="/pages/blog2/blog2.html">مدونات</a></li>
         </ul>
     </div>
 
@@ -190,8 +171,8 @@
                     <h3>الصفحات</h3>
                     <img src="../../content/arrow-right.svg" alt="arrow"/>
                 </div>
-                <a href="blog1/pages/blog2/blog2.html">مشاركات</a>
-                <a href="blog1/pages/blog2/blog2.html">مدونات</a>
+                <a href="/pages/blog2/blog2.html">مشاركات</a>
+                <a href="/pages/blog2/blog2.html">مدونات</a>
             </div>
         </div>
         <div class="footer-bottom">
