--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         </div>
         <div class="carousel-container">
             <div class="carousel-track">
+                <a href="/pages/blog2/blog2.html">
                 <div class="carousel-slide">
                     <div class="about-card">
                         <img src="./content/down1.jpg" alt="book1">
@@ -151,6 +152,8 @@
                         </div>
                     </div>
                 </div>
+                </a>
+                <a href="/pages/blog2/blog2.html">
                 <div class="carousel-slide">
                     <div class="about-card">
                         <img src="./content/speaking.png" alt="book2">
@@ -162,6 +165,8 @@
                         </div>
                     </div>
                 </div>
+                </a>
+                <a href="/pages/blog2/blog2.html">
                 <div class="carousel-slide">
                     <div class="about-card">
                         <img src="./content/down1.jpg" alt="book3">
@@ -173,6 +178,8 @@
                         </div>
                     </div>
                 </div>
+                </a>
+                <a href="/pages/blog2/blog2.html">
                 <div class="carousel-slide">
                     <div class="about-card">
                         <img src="./content/speaking.png" alt="book2">
@@ -184,6 +191,7 @@
                         </div>
                     </div>
                 </div>
+                </a>
             </div>
         </div>
         <div class="section-header">
