--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             </div>
 
             <ul class="mobile-nav-links">
-                <li style="--index: 0"><a href="pages/blog2/blog2.html">مشاركات</a></li>
-                <li style="--index: 1"><a href="pages/blog2/blog2.html">مدونات</a></li>
+                <li style="--index: 0"><a href="./pages/blog2/blog2.html">مشاركات</a></li>
+                <li style="--index: 1"><a href="./pages/blog2/blog2.html">مدونات</a></li>
             </ul>
         </div>
         <div class="hero-container">
@@ -140,7 +140,7 @@
         </div>
         <div class="carousel-container">
             <div class="carousel-track">
-                <a href="/pages/blog2/blog2.html">
+                <a href="./pages/blog2/blog2.html">
                 <div class="carousel-slide">
                     <div class="about-card">
                         <img src="./content/down1.jpg" alt="book1">
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="/pages/blog2/blog2.html">
+                <a href="./pages/blog2/blog2.html">
                 <div class="carousel-slide">
                     <div class="about-card">
                         <img src="./content/speaking.png" alt="book2">
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="/pages/blog2/blog2.html">
+                <a href="./pages/blog2/blog2.html">
                 <div class="carousel-slide">
                     <div class="about-card">
                         <img src="./content/down1.jpg" alt="book3">
@@ -179,7 +179,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="/pages/blog2/blog2.html">
+                <a href="./pages/blog2/blog2.html">
                 <div class="carousel-slide">
                     <div class="about-card">
                         <img src="./content/speaking.png" alt="book2">
@@ -358,8 +358,8 @@
                     <h3>الصفحات</h3>
                     <img src="./content/arrow-right.svg" alt="arrow"/>
                 </div>
-                <a href="/pages/blog2/blog2.html">مشاركات</a>
-                <a href="/pages/blog2/blog2.html">مدونات</a>
+                <a href="./pages/blog2/blog2.html">مشاركات</a>
+                <a href="./pages/blog2/blog2.html">مدونات</a>
             </div>
         </div>
         <div class="footer-bottom">
