--- a/pages/blog-template.html
+++ b/pages/blog-template.html
@@ -20,8 +20,8 @@
     <nav class="navbar">
         <ul class="nav-links">
             <li><a href="#contact-section">احجز استشارتك</a></li>
-            <li><a href="/pages/blog2/blog2.html">مشاركات</a></li>
-            <li><a href="/pages/blog2/blog2.html">مدونات</a></li>
+            <li><a href="./pages/blog2/blog2.html">مشاركات</a></li>
+            <li><a href="./pages/blog2/blog2.html">مدونات</a></li>
         </ul>
         <div class="logo">
             <div class="name-logo">
@@ -51,8 +51,8 @@
         </div>
 
         <ul class="mobile-nav-links">
-            <li style="--index: 0"><a href="/pages/blog2/blog2.html">مشاركات</a></li>
-            <li style="--index: 1"><a href="/pages/blog2/blog2.html">مدونات</a></li>
+            <li style="--index: 0"><a href="./pages/blog2/blog2.html">مشاركات</a></li>
+            <li style="--index: 1"><a href="./pages/blog2/blog2.html">مدونات</a></li>
         </ul>
     </div>
 
@@ -171,8 +171,8 @@
                     <h3>الصفحات</h3>
                     <img src="../../content/arrow-right.svg" alt="arrow"/>
                 </div>
-                <a href="/pages/blog2/blog2.html">مشاركات</a>
-                <a href="/pages/blog2/blog2.html">مدونات</a>
+                <a href="./pages/blog2/blog2.html">مشاركات</a>
+                <a href="./pages/blog2/blog2.html">مدونات</a>
             </div>
         </div>
         <div class="footer-bottom">
