--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         <div class="carousel-container">
             <div class="carousel-track">
-                <a href="./pages/blog2/blog2.html">
+                <a href="./pages/blog-template.html">
                 <div class="carousel-slide">
                     <div class="about-card">
                         <img src="./content/down1.jpg" alt="book1">
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="./pages/blog2/blog2.html">
+                <a href="./pages/blog-template.html">
                 <div class="carousel-slide">
                     <div class="about-card">
                         <img src="./content/speaking.png" alt="book2">
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="./pages/blog2/blog2.html">
+                <a href="./pages/blog-template.html">
                 <div class="carousel-slide">
                     <div class="about-card">
                         <img src="./content/down1.jpg" alt="book3">
@@ -179,7 +179,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="./pages/blog2/blog2.html">
+                <a href="./pages/blog-template.html">
                 <div class="carousel-slide">
                     <div class="about-card">
                         <img src="./content/speaking.png" alt="book2">
