--- a/pages/blog-template.html
+++ b/pages/blog-template.html
@@ -151,7 +151,7 @@
             <div class="footer-section">
                 <div class="footer-section-header">
                     <h3>تواصل معي</h3>
-                    <img src="../../content/arrow-right.svg" alt="arrow"/>
+                    <img src="../content/arrow-right.svg" alt="arrow"/>
                 </div>
                 <p>البريد الإلكتروني: contact@example.com</p>
                 <p>الهاتف: 4567-123 (555)</p>
@@ -159,7 +159,7 @@
             <div class="footer-section">
                 <div class="footer-section-header">
                     <h3>تابعني</h3>
-                    <img src="../../content/arrow-right.svg" alt="arrow"/>
+                    <img src="../content/arrow-right.svg" alt="arrow"/>
                 </div>
                 <div class="social-links">
                     <a href="#">تويتر</a>
@@ -169,7 +169,7 @@
             <div class="footer-section">
                 <div class="footer-section-header">
                     <h3>الصفحات</h3>
-                    <img src="../../content/arrow-right.svg" alt="arrow"/>
+                    <img src="../content/arrow-right.svg" alt="arrow"/>
                 </div>
                 <a href="../pages/blog2/blog2.html">مشاركات</a>
                 <a href="../pages/blog2/blog2.html">مدونات</a>
