--- a/pages/blog-template.html
+++ b/pages/blog-template.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="blog-template.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;500;600;700&family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script>
-    <script src="../../js/main.js" defer></script>
+  
+    <script src="../js/main.js" defer></script>
+
 </head>
 <body>
    
