--- a/pages/blog2/blog2.html
+++ b/pages/blog2/blog2.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
     <div class="mobile-nav">
-        <div class="mobile-consultation"><a href="#contact-section">احجز استشارتك</a></div>
+        <div class="mobile-consultation"><a href="../../index.html#contact-section">احجز استشارتك</a></div>
         <div class="mobile-nav-trigger">
             <div class="mobile-nav-trigger-container">
                 <span></span>
