--- a/pages/blog-template.html
+++ b/pages/blog-template.html
@@ -21,7 +21,7 @@
 
     <nav class="navbar">
         <ul class="nav-links">
-            <li><a href="#contact-section">احجز استشارتك</a></li>
+            <li><a href="/blog1">احجز استشارتك</a></li>
             <li><a href="../pages/blog2/blog2.html">مشاركات</a></li>
             <li><a href="../pages/blog2/blog2.html">مدونات</a></li>
         </ul>
@@ -36,7 +36,7 @@
         </div>
     </nav>
     <div class="mobile-nav">
-        <div class="mobile-consultation"><a href="../../index.html#contact-section">احجز استشارتك</a></div>
+        <div class="mobile-consultation"><a href="/blog1">احجز استشارتك</a></div>
         <div class="mobile-nav-trigger">
             <div class="mobile-nav-trigger-container">
                 <span></span>
